2007-07-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-volumebar.c: Updating the docs.

2007-07-25  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.11-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-07-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-find-toolbar.c:
	* src/hildon-find-toolbar.h: Adding a few new functions to control the
	selected item: hildon_find_toolbar_set_active,
	hildon_find_toolbar_set_active_iter, hildon_find_toolbar_get_active, 
	hildon_find_toolbar_get_active_iter . They correspond to respective
	GtkComboBox functions. 

	* examples/Makefile.am:
	* examples/hildon-find-toolbar-example.c: Adding the example to test the
	new functionality.

2007-07-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-seekbar-example.c: Adding the seekbar example to check
	theming easily.

	* src/hildon-font-selection-dialog.c: Fixing the default focus for dialog
	when font size > 32 and we pack a focusable widget inside. Actually using
	the default response would work too, but since we don't show default
	response state in any way (no theming) it would not be visible to the
	user. Fixes NB#63430.

2007-07-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-date-editor.c: Adding the missing variable setter in the
	set_property handler. Fixes NB#54182.

2007-07-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.h: Changing the long key press time from 1500ms to
	800ms as requested in NB#63700. I have a bad feeling about this, let's
	see... Fixes NB#63700.

2007-07-12  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/hildon-time-picker.c (hildon_time_picker_class_init,
	hildon_time_picker_map, hildon_time_picker_realize,
	hildon_time_picker_style_set): Split the contents of map to more